--- a/success.html
+++ b/success.html
@@ -208,7 +208,7 @@
 <body>
   <div class="container">
     <div class="title">
-      <h1>🎉 Merci pour votre commande !</h1>
+      <h1>Merci pour votre commande !</h1>
       <p>Votre commande a été validée avec succès</p>
     </div>
 
