--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </section>
 
     <!-- ACTE 2: Notre Histoire (Layout épuré) -->
-    <section id="acte-2" class="about-section section-createur" style="position: relative; background: linear-gradient(rgba(44, 36, 22, 0.88), rgba(44, 36, 22, 0.88)), url('./images/hero3tresors.png') center/cover no-repeat; background-attachment: fixed; color: #f5f0e8; padding: 80px 20px;">
+    <section id="acte-2" class="section-createur about-section" style="position: relative; background: linear-gradient(rgba(44, 36, 22, 0.88), rgba(44, 36, 22, 0.88)), url('./images/hero3tresors.png') center/cover no-repeat; background-attachment: fixed; color: #f5f0e8; padding: 80px 20px;">
         <div class="about-layout">
             
             <!-- Titre de section -->
