hero3tresors overlay

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </section>
 
     <!-- ACTE 2: Notre Histoire (Layout épuré) -->
-    <section id="acte-2" class="section-createur about-section" style="position: relative; background: url('/images/hero3tresors.png') center/cover no-repeat fixed; padding: 80px 20px; min-height: 100vh;">
+    <section id="acte-2" class="section-createur about-section">
         <div class="about-layout">
             
             <!-- Titre de section -->
