--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <!-- COLONNE DROITE : Texte scrollable -->
                 <div class="about-right">
                     <div class="story-modal" style="background: #ffffff !important; padding: 40px !important; border-radius: 12px !important; box-shadow: 0 8px 32px rgba(0,0,0,0.3) !important;">
-                        <p style="font-size: 1.4rem; font-weight: 700; color: #eda234; margin-bottom: 2rem; text-align: center; font-style: italic; text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
+                        <p style="font-size: 1.4rem !important; font-weight: 700 !important; color: #eda234 !important; margin-bottom: 2rem !important; text-align: center !important; font-style: italic !important; text-shadow: 2px 2px 4px rgba(0,0,0,0.3) !important;">
                             Mon parcours : de l'éloignement à la lumière
                         </p>
                         
