--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                 <div class="parcours-content" style="position: relative;">
                     
                     <!-- Photo Michael (float gauche) -->
-                    <div class="photo-portrait" style="float: left; margin: 0 30px 20px 0; width: 160px;">
-                        <img src="images/michael_lumbroso.png" alt="Michael Lumbroso" style="width: 100%; border-radius: 50%; border: 4px solid #eda234; box-shadow: 0 4px 16px rgba(0,0,0,0.15);">
+                    <div class="photo-portrait" style="float: left; margin: 0 30px 20px 0; width: 220px;">
+                        <img src="images/michael_lumbroso.png" alt="Michael Lumbroso" style="width: 100%; border-radius: 8px; border: 2px solid #eda234; box-shadow: 0 4px 16px rgba(0,0,0,0.15);">
                         <p style="text-align: center; font-size: 0.85rem; color: #666; margin-top: 10px; font-style: italic; line-height: 1.3;">Michael Lumbroso<br><span style="font-size: 0.8rem;">Fondateur</span></p>
                     </div>
                     
