--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
                             <p style="font-size: 0.95rem; font-weight: 600; color: #333; margin-bottom: 0.3rem;">Le don de la vie</p>
                             <p style="font-size: 0.85rem; color: #666; font-style: italic; margin-bottom: 0.8rem;">Par Neroline</p>
                             <audio controls preload="metadata" style="width: 100%; height: 32px; margin-bottom: 0.8rem;">
-                                <source src="audio/le-don-de-la-vie.mp3" type="audio/mpeg">
+                                <source src="/audio/le-don-de-la-vie.mp3" type="audio/mpeg">
+                                Votre navigateur ne supporte pas la lecture audio.
                             </audio>
                             <a href="https://tinyurl.com/bdfjjksx" target="_blank" rel="noopener" style="display: inline-block; padding: 8px 16px; background: #8B7355; color: white; text-decoration: none; border-radius: 6px; font-size: 0.85rem; font-weight: 600;">
                                 💾 Pré-sauvegarder
