--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                                 <source src="/audio/le-don-de-la-vie.mp3" type="audio/mpeg">
                                 Votre navigateur ne supporte pas la lecture audio.
                             </audio>
-                            <a href="https://tinyurl.com/bdfjjksx" target="_blank" rel="noopener" style="display: inline-block; padding: 8px 16px; background: #8B7355; color: white; text-decoration: none; border-radius: 6px; font-size: 0.85rem; font-weight: 600;">
+                            <a href="http://url2734.distrokid.com/ls/click?upn=u001.a0grtTtFNGObbwv02PitCPUodymsTWKXNsD1pT7nhD3DXOqDspYkZNQWmVgiUjl6oYH-2Bm83pSqXHcCU2FjDYG9VkRzPkYRqZecxVRFIaM7HSiCYq1Kfknd-2FErjotwIcZy2JBewkq2IfybRtDMZiSxgvIdawc9amyKG7NcIGGgyU-3DCdvx_viRPkTy4DzaPw0Jluw6DaIlFbcKVHs8VSD65p3nq9GLDw-2F2M0rkCyYWiAhAt4SP7APyCVqJDn-2FIqYgGk6fsocTnMiKlvQkYUEAjQnFzqdpP4mn47sRLzTYH7-2FP3St5kvCosPXr1qUGBLZ0jZyQKI6gEdkPZFamekrIPFCCS7XYqC1ee-2Bh4bdzkd-2BoHgvVKdKctTXxswy8j9fxTnUTGtLLg-3D-3D" target="_blank" rel="noopener" style="display: inline-block; padding: 8px 16px; background: #8B7355; color: white; text-decoration: none; border-radius: 6px; font-size: 0.85rem; font-weight: 600;">
                                 💾 Pré-sauvegarder
                             </a>
                         </div>
