correction responsive essai...

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ora Shel Torah - Jeux éducatifs juifs | De génération en génération</title>
     <meta name="description" content="Ora Shel Torah : jeux éducatifs juifs pour transmettre la Torah en famille. Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah. Compatibles Shabbat. Créés par un baal techouva.">
     <link rel="canonical" href="https://orasheltorah.fr/">
@@ -24,7 +24,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/responsive.css?v=20251108b">
+    <link rel="stylesheet" href="css/responsive.css?v=20251119a">
     
     <!-- SURCHARGE RESPONSIVE MOBILE - SPÉCIFICITÉ MAXIMALE -->
     <style id="responsive-override">
