--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@300;400;500;600;700&family=Noto+Sans+Hebrew:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v=20251120e">
     <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/responsive.css?v=20251120d">
+    <link rel="stylesheet" href="css/responsive.css?v=20251120e">
     
     <!-- Schema.org - Organization -->
     <script type="application/ld+json">
