--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <!-- Texte principal (3 premiers paragraphes) -->
                     <div class="texte-intro" style="font-family: 'Inter', sans-serif; font-size: 1.05rem; line-height: 1.8; color: #333;">
                         
-                        <p>J'ai été un juif de Kippour jusqu'à mes 54 ans. Bercé par les traditions de mes parents et de ma grand-mère, sans vraiment trouver de sens à une religion qui m'offrait davantage d'injonctions sévères que de réponses à mes questions.</p>
+                        <p>J'ai été un "juif de Kippour" jusqu'à mes 54 ans. Bercé par les traditions de mes parents et de ma grand-mère, sans vraiment trouver de sens à une religion qui m'offrait davantage d'injonctions sévères que de réponses à mes questions.</p>
 
                         <p>Un accident de la vie, un père malade... et me voilà priant avec ferveur un samedi matin. Quelques semaines passent. Mon père va mieux. Mais les explications rationnelles des médecins ne me suffisent plus.</p>
 
