--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ora Shel Torah - Jeux éducatifs juifs | De génération en génération</title>
-    <meta name="description" content="Ora Shel Torah : jeux éducatifs juifs pour transmettre la Torah en famille. Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah. Compatibles Shabbat. Créés par un baal techouva.">
+    <meta name="description" content="Jeux éducatifs juifs pour transmettre la Torah en famille avec joie. Jérusalem du Ciel, Minhag ou Halakha, Poztamitzvah. Certifiés halakhiquement. Précommandez.">
     
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
