--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           "url": "https://orasheltorah.fr",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://orasheltorah.fr/imgs/logo.png",
+            "url": "https://orasheltorah.fr/images/logo.png",
             "width": 400,
             "height": 400
           },
@@ -184,7 +184,7 @@
           "brand": {
             "@id": "https://orasheltorah.fr/#organization"
           },
-          "image": "https://orasheltorah.fr/imgs/jeux/jdc-box.png",
+          "image": "https://orasheltorah.fr/images/jeux/jdc-box.png",
           "offers": {
             "@type": "Offer",
             "price": "89.90",
@@ -207,7 +207,7 @@
           "brand": {
             "@id": "https://orasheltorah.fr/#organization"
           },
-          "image": "https://orasheltorah.fr/imgs/jeux/moh-box.png",
+          "image": "https://orasheltorah.fr/images/jeux/moh-box.png",
           "offers": {
             "@type": "Offer",
             "price": "24.90",
@@ -225,7 +225,7 @@
           "brand": {
             "@id": "https://orasheltorah.fr/#organization"
           },
-          "image": "https://orasheltorah.fr/imgs/jeux/poz-box.png",
+          "image": "https://orasheltorah.fr/images/jeux/poz-box.png",
           "offers": {
             "@type": "Offer",
             "price": "24.90",
