--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://orasheltorah.fr/">
     <meta property="og:title" content="Ora Shel Torah - Jeux de Société Éducatifs Juifs">
     <meta property="og:description" content="Transmettez la richesse du judaïsme en famille par le jeu. 3 jeux certifiés halakhiquement et compatibles Shabbat : Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah.">
-    <meta property="og:image" content="https://orasheltorah.fr/images/logo/logo_large_gold.png">
+    <meta property="og:image" content="https://orasheltorah.fr/images/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="fr_FR">
@@ -23,7 +23,7 @@
     <meta name="twitter:url" content="https://orasheltorah.fr/">
     <meta name="twitter:title" content="Ora Shel Torah - Jeux de Société Éducatifs Juifs">
     <meta name="twitter:description" content="Transmettez la richesse du judaïsme en famille par le jeu. 3 jeux certifiés halakhiquement et compatibles Shabbat.">
-    <meta name="twitter:image" content="https://orasheltorah.fr/images/logo/logo_large_gold.png">
+    <meta name="twitter:image" content="https://orasheltorah.fr/images/og-image.jpg">
     
     <link rel="canonical" href="https://orasheltorah.fr/">
     <meta name="google-site-verification" content="IBzdz8Su935Z6s_fI-JxuqDtIeRXjZQRDtUREqYiLr4" />
