--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 
                 <!-- CONTENU VALEURS À GAUCHE -->
                 <div class="slide-content">
-                    <h1 class="slide-main-value">Respect des valeurs</h1>
+                    <h1 class="slide-main-value">Respect<br>des&nbsp;valeurs</h1>
                     <p class="slide-description">Tous nos jeux sont certifiés conformes à la Halakha et compatibles Shabbat, pour une pratique sereine.</p>
                     <button class="btn-primary" data-scroll-to="certificats">Voir nos certificats</button>
             </div>
