erreur brand signalée par google

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
           "name": "Jérusalem du Ciel",
           "description": "Un jeu collaboratif qui retrace 3000 ans d'histoire juive à travers les âges",
           "brand": {
-            "@id": "https://orasheltorah.fr/#organization"
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
           },
           "image": "https://orasheltorah.fr/images/jeux/jdc-box.png",
           "offers": {
@@ -205,7 +206,8 @@
           "name": "Minhag ou Halakha",
           "description": "Un jeu pour distinguer les lois religieuses des coutumes juives",
           "brand": {
-            "@id": "https://orasheltorah.fr/#organization"
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
           },
           "image": "https://orasheltorah.fr/images/jeux/moh-box.png",
           "offers": {
@@ -223,7 +225,8 @@
           "name": "Poztamitzvah",
           "description": "Découvrez les mitzvot dans des situations du quotidien",
           "brand": {
-            "@id": "https://orasheltorah.fr/#organization"
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
           },
           "image": "https://orasheltorah.fr/images/jeux/poz-box.png",
           "offers": {
