ajout video philosophie

--- a/index.html
+++ b/index.html
@@ -3655,6 +3655,24 @@
                         <p>Parce que la beauté du judaïsme ne réside pas seulement dans les textes sacrés, mais aussi dans la façon dont nous les vivons ensemble, en famille, avec joie et simplicité.</p>
                     </div>
                 </section>
+
+                <!-- Section Vidéo -->
+                <div class="modal-video-section" style="margin-top: 40px; padding-top: 40px; border-top: 2px solid #daa520;">
+                    <h3 style="color: #daa520; font-size: 24px; margin-bottom: 20px; text-align: center; font-family: 'Crimson Text', serif;">
+                        Notre vision en vidéo
+                    </h3>
+                    
+                    <div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.2);">
+                        <iframe 
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;"
+                            src="https://www.youtube.com/embed/44nld3A8-Z8" 
+                            title="La philosophie d'Ora Shel Torah"
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
