--- a/index.html
+++ b/index.html
@@ -3377,12 +3377,11 @@
          BOUTON FLOTTANT "D'OÙ ÇA VIENT ?" + MODAL
          ======================================== -->
     
-    <!-- Bouton flottant -->
+    <!-- Bouton flottant - Bulle de savon dorée 3D -->
     <button id="floating-genesis-btn" 
             class="floating-genesis-button" 
-            aria-label="Découvrir la genèse du projet">
-        <span class="btn-icon">✨</span>
-        <span class="btn-text">D'où ça vient ?</span>
+            aria-label="À l'origine">
+        <span class="tooltip">À l'origine</span>
     </button>
 
     <!-- Script du bouton flottant - APRÈS le bouton HTML -->
