--- a/index.html
+++ b/index.html
@@ -1104,8 +1104,14 @@
                                 <source src="/audio/le-don-de-la-vie.mp3" type="audio/mpeg">
                                 Votre navigateur ne supporte pas la lecture audio.
                             </audio>
-                            <a href="http://url2734.distrokid.com/ls/click?upn=u001.a0grtTtFNGObbwv02PitCPUodymsTWKXNsD1pT7nhD3DXOqDspYkZNQWmVgiUjl6oYH-2Bm83pSqXHcCU2FjDYG9VkRzPkYRqZecxVRFIaM7HSiCYq1Kfknd-2FErjotwIcZy2JBewkq2IfybRtDMZiSxgvIdawc9amyKG7NcIGGgyU-3DCdvx_viRPkTy4DzaPw0Jluw6DaIlFbcKVHs8VSD65p3nq9GLDw-2F2M0rkCyYWiAhAt4SP7APyCVqJDn-2FIqYgGk6fsocTnMiKlvQkYUEAjQnFzqdpP4mn47sRLzTYH7-2FP3St5kvCosPXr1qUGBLZ0jZyQKI6gEdkPZFamekrIPFCCS7XYqC1ee-2Bh4bdzkd-2BoHgvVKdKctTXxswy8j9fxTnUTGtLLg-3D-3D" target="_blank" rel="noopener" style="display: inline-block; padding: 8px 16px; background: #8B7355; color: white; text-decoration: none; border-radius: 6px; font-size: 0.85rem; font-weight: 600;">
-                                💾 Pré-sauvegarder
+                            <a href="https://open.spotify.com/track/0gOPV0rkOIzuOPzE5b1XMx?si=_6BSEzN8RHq6lbnSR8eXAQ" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="btn-spotify">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" style="display: inline-block; vertical-align: middle; margin-right: 8px;">
+                                    <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"/>
+                                </svg>
+                                Écouter sur Spotify
                             </a>
                         </div>
                     </div>
