--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
                     <!-- CARTE 1 : LIVRE -->
                     <div class="inspiration-card" style="background: rgba(255, 255, 255, 0.05); padding: 25px; border-radius: 12px; border-left: 3px solid #DAA520; border: 1px solid rgba(255, 255, 255, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                         <h4 style="font-family: 'Crimson Text', serif; font-size: 1.3rem; color: #DAA520; margin-bottom: 0.8rem; display: flex; align-items: center; gap: 10px;">
-                            📚 <span>Si vous étiez Dieu</span>
+                            📖 <span>Si vous étiez Dieu</span>
                         </h4>
                         <p style="font-size: 0.9rem; color: #FFFFFF; font-style: italic; margin-bottom: 1rem;">Par Rav Aryeh Kaplan</p>
                         <p style="font-size: 0.95rem; color: #FFFFFF; line-height: 1.6; margin-bottom: 1.2rem;">Un livre qui ose poser les vraies questions avec une modernité saisissante et une écriture accessible.</p>
