--- a/index.html
+++ b/index.html
@@ -1610,10 +1610,9 @@
                 <div class="footer-column">
                     <h3>À Propos</h3>
                     <nav>
-                        <a href="a-propos.html">Notre histoire</a>
-                        <a href="a-propos.html#philosophie">Notre philosophie</a>
+                        <a href="#" id="footer-histoire" class="footer-genesis-link">Notre histoire</a>
+                        <a href="#" id="footer-philosophie" class="footer-genesis-link">Notre philosophie</a>
                         <a href="#contact">Contact</a>
-                        <a href="#partenaires">Partenaires</a>
                     </nav>
                 </div>
 
@@ -1633,7 +1632,6 @@
                     <h3>Aide & Support</h3>
                     <nav>
                         <a href="faq.html">Questions fréquentes</a>
-                        <a href="#contact">Nous contacter</a>
                     </nav>
                 </div>
 
