--- a/legal/retours-remboursements.html
+++ b/legal/retours-remboursements.html
@@ -9,8 +9,9 @@
     
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/legal.css">
 </head>
-<body>
+<body class="legal-page">
     <header id="main-header">
         <div class="container">
             <a href="../index.html" class="logo">
@@ -23,7 +24,7 @@
         </div>
     </header>
 
-    <main style="margin-top: 80px; padding: 2rem 0;">
+    <main>
         <div class="container">
             <h1>Retours et remboursements</h1>
             
