--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                         </h4>
                         <p style="font-size: 0.9rem; color: #FFFFFF; font-style: italic; margin-bottom: 1rem;">Par Rav Aryeh Kaplan</p>
                         <p style="font-size: 0.95rem; color: #FFFFFF; line-height: 1.6; margin-bottom: 1.2rem;">Un livre qui ose poser les vraies questions avec une modernité saisissante et une écriture accessible.</p>
-                        <a href="https://www.amazon.fr/vous-%C3%A9tiez-Dieu-Aryeh-Kaplan/dp/9657556031/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2MR22BXIWBXJR&dib=eyJ2IjoiMSJ9.Gat3mz0LHk2B1LxzrLhOFg.1OTTN-TuJ2jtmD1_kMiDF3lMX9VJ4PbmKg-4zmGXOiw&dib_tag=se&keywords=si+vous+etiez+dieu+de+arye+kaplan&qid=1763557510&sprefix=si+vous+etiez+dieu+de+arye+kaplan%2Caps%2C120&sr=8-1" target="_blank" rel="noopener" style="display: inline-block; padding: 10px 20px; background: #eda234; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                        <a href="https://www.amazon.fr/vous-%C3%A9tiez-Dieu-Aryeh-Kaplan/dp/9657556031/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2MR22BXIWBXJR&dib=eyJ2IjoiMSJ9.Gat3mz0LHk2B1LxzrLhOFg.1OTTN-TuJ2jtmD1_kMiDF3lMX9VJ4PbmKg-4zmGXOiw&dib_tag=se&keywords=si+vous+etiez+dieu+de+arye+kaplan&qid=1763557510&sprefix=si+vous+etiez+dieu+de+arye+kaplan%2Caps%2C120&sr=8-1" target="_blank" rel="noopener">
                             Voir sur Amazon →
                         </a>
                     </div>
@@ -1125,7 +1125,7 @@
                         </h4>
                         <p style="font-size: 0.9rem; color: #FFFFFF; font-style: italic; margin-bottom: 1rem;">Association Lev</p>
                         <p style="font-size: 0.95rem; color: #FFFFFF; line-height: 1.6; margin-bottom: 1.2rem;">Un enseignant dont la clarté pédagogique illumine les textes de la Torah avec chaleur et profondeur.</p>
-                        <a href="https://www.youtube.com/@associationlev" target="_blank" rel="noopener" style="display: inline-block; padding: 10px 20px; background: #2c3e50; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                        <a href="https://www.youtube.com/@associationlev" target="_blank" rel="noopener">
                             🎧 Découvrir →
                         </a>
                     </div>
