reglages liens philosophie et histoire

--- a/index.html
+++ b/index.html
@@ -1610,8 +1610,8 @@
                 <div class="footer-column">
                     <h3>À Propos</h3>
                     <nav>
-                        <a href="a-propos.html">Notre histoire</a>
-                        <a href="a-propos.html#philosophie">Notre philosophie</a>
+                        <a href="#" id="footer-histoire" class="footer-genesis-link">Notre histoire</a>
+                        <a href="#" id="footer-philosophie" class="footer-genesis-link">Notre philosophie</a>
                         <a href="#contact">Contact</a>
                         <a href="#partenaires">Partenaires</a>
                     </nav>
