--- a/faq.html
+++ b/faq.html
@@ -18,6 +18,7 @@
   <!-- CSS du site principal -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/prelaunch-popup.css">
   
   <!-- Styles spécifiques à la FAQ (gardent toutes les fonctionnalités) -->
   <style>
@@ -1170,6 +1171,7 @@
 
   <!-- JavaScript du site principal (si nécessaire pour le header/footer) -->
   <script src="js/main.js"></script>
+  <script src="js/prelaunch-popup.js"></script>
 
 </body>
 </html>
