--- a/a-propos.html
+++ b/a-propos.html
@@ -10,6 +10,7 @@
     <link rel="canonical" href="https://orasheltorah.fr/a-propos.html">
     
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/prelaunch-popup.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
@@ -185,6 +186,7 @@
     </script>
 
     <script src="js/main.js"></script>
+    <script src="js/prelaunch-popup.js"></script>
 </body>
 </html>
 
