--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="css/main.css?v=20251120h">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/responsive.css?v=20251120e">
+    <link rel="stylesheet" href="css/prelaunch-popup.css">
     
     <!-- Schema.org - Organization -->
     <script type="application/ld+json">
@@ -2645,6 +2646,7 @@
     <script src="js/animations.js?v=20251103a"></script>
     <script src="js/gallery-config.js?v=20251103a"></script>
     <script src="js/content-discovery-modals.js?v=20251103a"></script>
+    <script src="js/prelaunch-popup.js"></script>
     
     <!-- Code Panier Minimal - Inline -->
     <script>
