--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/responsive.css?v=20251120e">
     <link rel="stylesheet" href="css/prelaunch-popup.css">
+    <link rel="stylesheet" href="css/certificates-modal.css">
     
     <!-- Schema.org - Organization -->
     <script type="application/ld+json">
@@ -2647,6 +2648,7 @@
     <script src="js/gallery-config.js?v=20251103a"></script>
     <script src="js/content-discovery-modals.js?v=20251103a"></script>
     <script src="js/prelaunch-popup.js"></script>
+    <script src="js/certificates-modal.js"></script>
     
     <!-- Code Panier Minimal - Inline -->
     <script>
