boutons regles du jeu

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="css/responsive.css?v=20251120e">
     <link rel="stylesheet" href="css/prelaunch-popup.css">
     <link rel="stylesheet" href="css/certificates-modal.css">
+    <link rel="stylesheet" href="css/rules-modal.css">
     
     <!-- Schema.org - Organization -->
     <script type="application/ld+json">
@@ -554,6 +555,9 @@
                 <button class="btn-modal btn-store" data-modal="content-discovery-jdc">
                     📦 Découvrir le contenu
                 </button>
+                <button class="btn-modal" data-action="rules" data-game="jdc">
+                    📋 Règles du jeu
+                </button>
                 <button class="btn-modal btn-store" data-action="store">
                     🛒 Commander
                 </button>
@@ -735,6 +739,9 @@
                 <button class="btn-modal btn-store" data-modal="content-discovery-moh">
                     📦 Découvrir le contenu
                 </button>
+                <button class="btn-modal" data-action="rules" data-game="moh">
+                    📋 Règles du jeu
+                </button>
                 <button class="btn-modal btn-store" data-action="store">
                     🛒 Commander
                 </button>
@@ -905,6 +912,9 @@
                 </button>
                 <button class="btn-modal btn-store" data-modal="content-discovery-poz">
                     📦 Découvrir le contenu
+                </button>
+                <button class="btn-modal" data-action="rules" data-game="poz">
+                    📋 Règles du jeu
                 </button>
                 <button class="btn-modal btn-store" data-action="store">
                     🛒 Commander
@@ -2649,6 +2659,7 @@
     <script src="js/content-discovery-modals.js?v=20251103a"></script>
     <script src="js/prelaunch-popup.js"></script>
     <script src="js/certificates-modal.js"></script>
+    <script src="js/rules-modal.js"></script>
     
     <!-- Code Panier Minimal - Inline -->
     <script>
