ajout lumieres d israel

--- a/index-original.html
+++ b/index-original.html
@@ -449,7 +449,7 @@
             
             <!-- En-tête de section -->
             <div class="showcase-header">
-                <h2 class="section-title">Trois jeux pour redécouvrir le judaïsme en famille</h2>
+                <h2 class="section-title">Quatre jeux pour redécouvrir le judaïsme en famille</h2>
                 </div>
                 
             <!-- Slider horizontal simple -->
@@ -512,6 +512,23 @@
                         </button>
                     </div>
             </div>
+
+                <!-- Slide 4 : LUMIERES D'ISRAEL -->
+                        <div class="jeu-slide" data-jeu="lumieres" data-slide="3">
+                    <div class="jeu-visual">
+                        <div class="jeu-frame">
+                                    <img src="images/lumieres.png" alt="Lumières d'Israël - Jeu des grandes figures de l'histoire juive" loading="lazy">
+                    </div>
+                    </div>
+                    <div class="jeu-info">
+                        <h3 class="jeu-title">Lumières d'Israël</h3>
+                        <p class="jeu-tagline">
+                            Découvrez les grandes figures<br>
+                            qui ont façonné l'histoire juive
+                        </p>
+                        <a href="#lumieres-israel" class="btn-discover">Découvrir ce jeu →</a>
+                    </div>
+            </div>
                     </div>
             </div>
 
@@ -533,6 +550,7 @@
                 <button class="dot active" data-slide="0" aria-label="Jérusalem du Ciel"></button>
                 <button class="dot" data-slide="1" aria-label="Minhag ou Halakha"></button>
                 <button class="dot" data-slide="2" aria-label="Poztamitsvah"></button>
+                <button class="dot" data-slide="3" aria-label="Lumières d'Israël"></button>
             </div>
 
         </div>
